# Blogger-Translator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/governance/: IMPLEMENTATION_PLAN.md  PRD.md  PROGRESS.md  STARTUP.md  STRUCTURE.md  TECHSTACK.md
scripts/: smoke_llm.py  smoke_scraper.py  smoke_storage.py  smoke_translate_article.py  smoke_verifier_from_paste.py
src/: __init__.py
src/app/: mock_pipeline.py  pipeline_runner.py  streamlit_app.py  ui_state.py  verifier_ui_utils.py
src/config/: author_column_mappings.json  settings.py
src/config/prompts/: Revision_Bot_Prompt.md  Revision_Chunk_Prompt.md  Revision_Outline_Prompt.md  Translate_Bot_Prompt.md  Translate_Chunk_Prompt.md  Verifier_Entity_Verify_Prompt.md  Verifier_Interleave_Paragraphs_Prompt.md  Verifier_Name_Check_Prompt.md  Verifier_Synonym_Review_Prompt.md
src/formatter/: byline_resolver.py  docx_formatter.py
src/pipeline/: orchestrator.py
src/revisor/: revision_stage.py
src/scraper/: bastille_scraper.py  html_structure.json
src/storage/: firebase_storage_client.py  repositories.py
src/translator/: siliconflow_client.py  translate_stage.py
src/verifier/: entity_extractor.py  entity_key.py  entity_verifier.py  name_extractor.py  paragraph_aligner.py  synonym_review_stage.py  verify_stage.py
tests/: test_name_extractor.py  test_repository_entity_map.py  test_revision_stage.py  test_translate_stage.py  test_verifier_contract.py  test_verifier_ui_utils.py
