[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blogger-translator"
version = "0.1.0"
description = "BastillePost article translation pipeline with Streamlit and Firebase Storage"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
